<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notice"
    android:orientation="vertical"
    android:id="@+id/notice">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview0"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#F3D6FD"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/cultural"
                                android:textColor="@color/black"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:paddingTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/desc"
                                android:textColor="@color/purple_500"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#F3D6FD"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/cultural"
                                android:textColor="@color/black"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:paddingTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/card11"
                                android:textColor="@color/purple_500"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#F3D6FD"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/cultural"
                                android:textColor="@color/black"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:paddingTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/ideacreation"
                                android:textColor="@color/purple_500"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#F3D6FD"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/cultural"
                                android:textColor="@color/black"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:paddingTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/card11"
                                android:textColor="@color/purple_500"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#F3D6FD"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/career"
                                android:textColor="@color/black"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:paddingTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="clip_vertical"
                                android:text="@string/card11"
                                android:textColor="@color/purple_500"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>


</LinearLayout>
